Fixes #24243 - Recommended repos toggle styles
Recommended repositories toggle is too close
to the "Available Repositories" header on narrow displays

--- a/webpack/scenes/RedHatRepositories/index.scss
+++ b/webpack/scenes/RedHatRepositories/index.scss
@@ -46,6 +46,7 @@
 
       h2 {
         margin: 0;
+        margin-right: 40px;
       }
     }
   }
